<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@drawable/back">

    <TextView
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organize_your_life"
        android:textAlignment="center"
        android:textColor="#0E2B42"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <ImageButton
        android:id="@+id/addbutton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:contentDescription="@string/add_task"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

    <!-- First Task Section -->
    <EditText
        android:id="@+id/firsttask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/take_breakfast"
        android:padding="16dp"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

    <Button
        android:id="@+id/delete_firsttask"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/delete2"
        android:contentDescription="@string/delete01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253" />

    <Button
        android:id="@+id/edit_firsttask"
        android:layout_width="41dp"
        android:layout_height="32dp"
        android:background="@drawable/save"
        android:textColor="#121111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <!-- Second Task Section -->
    <EditText
        android:id="@+id/secondtask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/read_books"
        android:padding="16dp"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />



    <Button
        android:id="@+id/delete_secondtask"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/delete2"
        android:contentDescription="@string/delete2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/saveBtn2"
        android:layout_width="41dp"
        android:layout_height="32dp"
        android:background="@drawable/save"
        android:contentDescription="save"
        android:textColorLink="#121111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"
        tools:ignore="TouchTargetSizeCheck" />

    <!-- Third Task Section -->
    <EditText
        android:id="@+id/thirdtask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/meditation"
        android:padding="16dp"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/delete_thirdtask"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/delete2"
        android:contentDescription="@string/delete3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/saveBtn3"
        android:layout_width="41dp"
        android:layout_height="32dp"
        android:background="@drawable/save"
        android:contentDescription="save"
        android:textColorLink="#121111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598"
        tools:ignore="TouchTargetSizeCheck" />

    <!-- Fourth Task Section -->
    <EditText
        android:id="@+id/fourthtask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/garderning"
        android:padding="16dp"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/delete_fourthtask"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/delete2"
        android:contentDescription="@string/delete4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/saveBtn4"
        android:layout_width="41dp"
        android:layout_height="32dp"
        android:background="@drawable/save"
        android:contentDescription="save"
        android:textColorLink="#121111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769"
        tools:ignore="TouchTargetSizeCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>
